Reopened Ticket: Fix spacing for transaction tags (#5181)
* update:increase spacing in betweeen label and value in transaction tags

* update: max-content spacing in label-value pair

* cleanup

---------

--- a/phytoplankton-console/src/components/ui/EntityPropertiesCard/index.module.less
+++ b/phytoplankton-console/src/components/ui/EntityPropertiesCard/index.module.less
@@ -25,7 +25,7 @@
 .items {
   display: grid;
   grid-template-columns: auto auto;
-  gap: 12px;
+  gap: 12px 40px;
   padding: 0 12px 12px 12px;
 }
 
